--- a/.github/workflows/python-publish-icebridge.yml
+++ b/.github/workflows/python-publish-icebridge.yml
@@ -34,15 +34,13 @@ jobs:
     - name: Build with Gradle
       uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
       with:
-        arguments: uberJar --project-dir icebridge
+        arguments: uberJar
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install build
     - name: Build Python package
-      run: | 
-        cd icebridge
-        python -m build
+      run: python -m build
     - name: Publish package
       uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
       with:
