--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "icebridge"
 description = "A Python Bridge to Apache Iceberg using Py4J"
+long_description = "A Python Bridge to Apache Iceberg using Py4J"
 authors = [{name="Eventual Inc.", email = "team@eventualcomputing.com"}]
 license = {file="LICENSE"}
 keywords = ["Iceberg", "Data Warehouse"]
