--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -19,15 +19,23 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up Python 3.9
+    - name: Set up Python
       uses: actions/setup-python@v3
       with:
-        python-version: "3.9"
+        python-version: '3.8'
+    - name: Set up JDK 8
+      uses: actions/setup-java@v3
+      with:
+        java-version: '8'
+        distribution: 'temurin'
+    - name: Build with Gradle
+      uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
+      with:
+        arguments: uberJar
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install pytest
         pip install .
-    - name: Test with pytest
-      run: |
-        pytest
+    - name: Run python tests
+      run: pytest
