--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ dependencies = [
     "py4j == 0.10.9.5",
     "fsspec",
     "s3fs",
-    "pyarrow == 8.0.0",
+    "pyarrow >= 6",
     "numpy >= 1.20",
     'importlib-metadata; python_version<"3.8"',
 ]
